# CircuitPython_SerialControlledServo

./: .pre-commit-config.yaml  LICENSE  README.rst  README.rst.license  justfile  pyproject.toml  requirements.txt  sc_servo.py
.github/workflows/: build.yml  pre-commit.yml  release_gh.yml
docs/: Makefile  api.rst  api.rst.license  conf.py  examples.rst  examples.rst.license  index.rst
examples/: sc_servo_shooshine.py  sc_servo_simpletest.py
