# SPDX-FileCopyrightText: 2022 Alec Delaney for Adafruit Industries
#
# SPDX-License-Identifier: MIT
[build-system]
requires = ["setuptools", "wheel", "setuptools-scm"]

[project]
name = "circuitpython-serial-servo"
description = "CircuitPython library for Serial Servo Bus (UART)"
version = "0.0.0+auto.0"
readme = "README.rst"
authors = [{ name = "Jacques Supcik", email = "jacques.supcik@hefr.ch" }]
urls = { Homepage = "https://github.com/supcik/CircuitPython_SerialServo" }
keywords = [
    "adafruit",
    "blinka",
    "circuitpython",
    "micropython",
    "servo",
    "motor",
    "controller",
    "serial",
    "serial-servo",
    "serial-motor",
    "serial-servo-motor",
]
license = { text = "MIT" }
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
py-modules = ["serial_servo"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
optional-dependencies = { optional = { file = ["optional_requirements.txt"] } }
